fixed overflow

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -51,7 +51,7 @@
         }
 
         .nav{
-            width: 30%;
+            // width: 30%;
             display: flex;
             justify-content: end;
             color: $White;
